--- a/package.json
+++ b/package.json
@@ -7,50 +7,25 @@
     "test": "npm test"
   },
   "dependencies": {
-	"atlassian-jwt": "^1.6.0",
-	"aws-sdk": "^2.238.1",
-	"axios": "^0.15.0",
-	"bunyan": "^1.8.15",
-	"bunyan-format": "^0.2.1",
-	"cookie-parser": "^1.1.0",
-	"csurf": "^1.11.0",
-	"dotenv": "^14.0.1",
-	"dotenv-expand": "^8.0.3",
-	"express": "^4.17.3",
-	"express-rate-limit": "^5.1.3",
-	"express-sslify": "^1.2.0",
-	"express-validator": "^6.14.0",
-	"hbs": "^4.1.2",
-	"helmet": "^3.21.2",
-	"hot-shots": "^8.3.2",
-	"https-proxy-agent": "5.0.0",
-	"ioredis": "^4.12.3",
-	"is-base64": "^1.1.0",
-	"launchdarkly-node-server-sdk": "^6.2.0",
-	"lodash": "^4.17.21",
-	"matchstick": "^1.2.1",
-	"minimatch": "^5.0.1",
-	"moment": "^2.29.4",
-	"optional-require": "^1.1.8",
-	"pg": "^8.7.3",
-	"primer": "^10.6.0",
-	"rate-limit-redis": "^1.7.0",
-	"safe-json-stringify": "^1.2.0",
-	"sanitize-html": "^2.10.0",
-	"sequelize": "^6.19.1",
-	"sequelize-cli": "^6.2.0",
-	"sequelize-encrypted": "^1.0.0",
-	"speakeasy": "^2.0.0",
-	"sqs-consumer": "^5.6.0",
-	"throng": "^5.0.0",
-	"ts-retry-promise": "^0.7.0",
-	"tsconfig-paths": "^3.14.0",
-	"tslib": "~2.3.1",
-	"typescript": "~4.1.1",
-	"uuid": "^7.3.2",
-	"xml2json-light": "^1.0.3",
-	"yaml": "^2.0.2"
-	},
+"atlassian-jwt": "^1.6.0",
+"aws-sdk": "^2.238.1",
+"axios": "^0.15.0",
+"bunyan": "^1.8.15",
+"bunyan-format": "^0.2.1",
+"cookie-parser": "^1.1.0",
+"csurf": "^1.11.0",
+"dotenv": "^14.0.1",
+"dotenv-expand": "^8.0.3",
+"express": "^4.17.3",
+"express-rate-limit": "^5.1.3",
+"express-sslify": "^1.2.0",
+"express-validator": "^6.14.0",
+"hbs": "^4.1.2",
+"helmet": "^3.21.2",
+"hot-shots": "^8.3.2",
+"https-proxy-agent": "5.0.0",
+"ioredis": "^4.12.3"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/atrigueiro/test-github-jira.git"
