--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,13 +4,7 @@ name: My Deployment flow
 
 # Controls when the action will run. 
 on:
-  workflow_dispatch:
-  pull_request:
-  push:
-    branches:
-      - main
-  release:
-    types: [published]
+  on: [push]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
